<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout= "@layout/toolbar_white_bg_amazon"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/alexa_blue_white_100px" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/vodafone_light"
            android:text="amazon alexa"
            />
    </LinearLayout>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/screen2_tv1"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text" />

    <FrameLayout
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/orange_chat">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alexa_start_dinner_time"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/lightgrey_chat">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alexa_call_mum"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

    </FrameLayout>


    <FrameLayout
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/orange_chat">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alexa_whats_the_weather"
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/vdf_router"
        android:id="@+id/ivAlexaImage"
        />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_above="@+id/Rl_sign_in"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="@dimen/top_margin_large"
        android:background="@color/text_color"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/Rl_sign_in"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/learn_more1"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_more2"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/learn_more3"
            android:textColor="@color/brand_orange"
            android:textSize="@dimen/small_text" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>