<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_white_bg_with_settings" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/vodafone_font_bold"
        android:gravity="center"
        android:text="@string/howItWorks"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:id="@+id/cardViewInstructions"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/vodafone_regular"
                android:gravity="center"
                android:text="@string/dinner_time_allows"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/vodafone_regular"
                android:gravity="center"
                android:text="@string/howItWorksInstructionsOne"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/vodafone_regular"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/howItWorksInstructionsTwo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/btnNowNow"
        android:layout_below="@+id/cardViewInstructions"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_red_button_enabled"
        android:text="Next"
        android:fontFamily="@font/vodafone_regular"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>