<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_custom_white_bg" />


    <LinearLayout
        android:id="@+id/llCongrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:visibility="gone"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/grey_100" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLinkDinnerTImeAlexa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/vodafone_font_bold"
            android:gravity="center"
            android:text="Congratulations !"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/vodafone_regular"
            android:gravity="center"
            android:text="@string/genie_account_linked"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/ic_vodafone_logo" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/vodafone_regular"
            android:gravity="center"
            android:text="@string/control_internet_by_voice"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/alexa_blue_white_100px" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/vodafone_regular"
            android:gravity="center"
            android:text="@string/setup_family_routine"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/btnNowNow"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_red_button_enabled"
            android:fontFamily="@font/vodafone_regular"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lotteAnimationViewSkillActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />


</RelativeLayout>